# haskell-book-code

./: README.md
ch-05/: types.hs
ch-10/: README.md  fold.hs
ch-11/: README.md  algebraic-datatypes.hs
ch-12/: README.md  signaling-adversity.hs
ch-13/: building-projects.hs
ch-13/hangman/: hangman.cabal
ch-13/hello/: hello.cabal  stack.yaml
ch-13/hello/src/: DogsRule.hs  Hello.hs
ch-14/: exercises.hs
ch-14/morse/: LICENSE
ch-14/testing/: Addition.hs  Identity.hs  Pair.hs  Trivial.hs  testing.cabal
ch-16/: README.md  functors.hs
ch-17/: README.md  applicatives.hs
ch-18/: lecture-notes.md  monads.hs
ch-20/: README.md
ch-21/: traversable.hs
ch-22/: reader.hs
ch-24/: ini-parser.hs  more-parsers.hs  parser-combinators.hs
ch-25/: composing-types.hs
ch-27/: README.md  non-strictness.hs  strict.hs
ch-28/: README.md  bench.hs  exercises.hs  maps-sets.hs  profile.hs  sequence.hs  vector.hs
ch-29/: README.md  exercises.hs  nested-io.hs
ch-30/: .gitignore  README.md  catch-all.hs  catch.hs  custom-exceptions.hs  existential-quantification.hs  try.hs
ch-31/: record_wildcards.hs
ch-31/fingerd/: .gitignore  LICENSE  README.md  finger.db  fingerd.cabal
ch-31/fingerd/src/: Debug.hs  FingerServer.hs  Main.hs  UserActions.hs  UserActionsExe.hs  UserData.hs  UserServer.hs
code/: 061-typeclasses-instances.hs  063-typeclasses-ord.hs  09-lists.hs  15-monoids-semigroups.hs  17b-quickbatch.hs  20-foldables.hs  23-state.hs  242-marshalling-json.hs  26-monad-transformers.hs  261-monad-transformers-exercises.hs  functional_patterns.hs  functors.hs  hello.hs  recursion.hs  typeclasses-eq.hs
hangman/: stack.yaml
hangman/src/: Game.hs  Main.hs  Words.hs
hello/exe/: Main.hs
morse/: package.yaml
morse/src/: Main.hs  Morse.hs  MorseMap.hs  Types.hs
morse/test/: Spec.hs
notes/: 13-building-projects.md  15-monoids-semigroups.md  18-monad-lecture-notes.md  18-monads.md  21-traversable.md  22-reader.md  23-state.md  24-parser-conbinators.md  25-composing-types.md  26-monad-transformers.md  functional-patterns.md  lists.md  recursion.md  typeclasses.md  types.md
testing/: Division.hs  Multiplication.hs  Sum.hs  testing.cabal
