name: testing
version: 0.1.0.0
license-file: LICENSE
author: Tejas Bubane
maintainer: tejasbubane@gmail.com
category: Text
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Addition
                 , Division
                 , Multiplication
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
               , hspec
               , QuickCheck
  hs-source-dirs: .
  default-language: Haskell2010
