name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Tejas Bubane
maintainer:          tejasbubane@example.com
copyright:           2018 Tejas Bubane
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  other-modules:       Words
                     , Game
