name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tejasbubane/haskell-book-code
license:             BSD3
license-file:        LICENSE
author:              Tejas Bubane
maintainer:          tejasbubane@gmail.com
copyright:           2018-2019
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       UserData
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable userActions
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             UserActions.hs
  other-modules:       UserData
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
